ruler. whole chromosome layout bug fix.

--- a/css/juicebox.scss
+++ b/css/juicebox.scss
@@ -1203,10 +1203,14 @@ div[id$="content-container"] {
         display: flex;
         flex-flow: row;
         flex-wrap: nowrap;
-        justify-content: space-between;
+        //justify-content: space-between;
+        justify-content: flex-start;
 
         // whole genome divs
         .x-axis-whole-genome-chromosome-container {
+
+          //box-sizing: border-box;
+
           display: flex;
           flex-direction: column;
           flex-wrap: nowrap;
@@ -1220,13 +1224,12 @@ div[id$="content-container"] {
 
           height: 100%;
 
-          border-left-color: transparent;
-          border-left-style: solid;
-          border-left-width: thin;
-
-          border-right-color: #bfbfbf;
-          border-right-style: solid;
-          border-right-width: thin;
+          //border-left-color: transparent;
+          //border-left-style: solid;
+          //border-left-width: thin;
+          //border-right-color: #bfbfbf;
+          //border-right-style: solid;
+          //border-right-width: thin;
 
           white-space: nowrap;
           overflow: hidden;
@@ -1237,9 +1240,9 @@ div[id$="content-container"] {
 
         }
 
-        .x-axis-whole-genome-chromosome-container:last-child {
-          border-right-color: transparent;
-        }
+        //.x-axis-whole-genome-chromosome-container:last-child {
+        //  border-right-color: transparent;
+        //}
 
       }
 
@@ -1345,10 +1348,13 @@ div[id$="content-container"] {
         display: flex;
         flex-flow: column;
         flex-wrap: nowrap;
-        justify-content: space-between;
+        justify-content: flex-start;
 
         // whole genome divs
         .y-axis-whole-genome-chromosome-container {
+
+          //box-sizing: border-box;
+
           display: flex;
           flex-direction: column;
           flex-wrap: nowrap;
@@ -1362,13 +1368,12 @@ div[id$="content-container"] {
 
           width: 100%;
 
-          border-top-color: transparent;
-          border-top-style: solid;
-          border-top-width: thin;
-
-          border-bottom-color: #bfbfbf;
-          border-bottom-style: solid;
-          border-bottom-width: thin;
+          //border-top-color: transparent;
+          //border-top-style: solid;
+          //border-top-width: thin;
+          //border-bottom-color: #bfbfbf;
+          //border-bottom-style: solid;
+          //border-bottom-width: thin;
 
           white-space: nowrap;
           overflow: hidden;
@@ -1380,9 +1385,9 @@ div[id$="content-container"] {
 
         }
 
-        .y-axis-whole-genome-chromosome-container:last-child {
-          border-bottom-color: transparent;
-        }
+        //.y-axis-whole-genome-chromosome-container:last-child {
+        //  border-bottom-color: transparent;
+        //}
 
       }
 
@@ -1552,7 +1557,7 @@ div[id$="content-container"] {
 
 .hic-whole-genome-chromosome-highlight {
   cursor: pointer;
-  background-color: $hic-whole-genome-chromosome-highlight-color;
+  //background-color: $hic-whole-genome-chromosome-highlight-color;
 }
 
 .hic-track-menu {
